[package]
name = "hashvec"
version = "0.1.5"
edition = "2021"
description = "A HashMap/Vector hybrid: efficient, ordered key-value data storage."
license = "MIT"
homepage = "https://github.com/skyeterran/ordered-map"
repository = "https://github.com/skyeterran/ordered-map"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
